objects/FAQ__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Default Article Type for MathWorks</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answers_Preview_URL__c</fullName>
        <formula>HYPERLINK(($Setup.General_Settings__c.AnswersPreviewBaseUrl__c)&amp; CASESAFEID(Id), &quot;Answers Preview&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answers Preview URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answers_URL_Link__c</fullName>
        <description>Clickable Answers URL</description>
        <formula>HYPERLINK(Answers_URL__c, Answers_URL__c)</formula>
        <label>Answers URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answers_URL__c</fullName>
        <label>Solution URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answers_URL_with_Postfix__c</fullName>
        <formula>Answers_URL__c &amp; $Setup.General_Settings__c.SuggestedContentUrlPostfix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answers URL with Postfix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_To_Be_Sent__c</fullName>
        <label>Article To Be Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Was_Sent__c</fullName>
        <label>Article Was Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment #2</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment #3</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_4__c</fullName>
        <label>Attachment #4</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachment #1</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Created_Migrated__c</fullName>
        <label>Created (Migrated)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_ID__c</fullName>
        <label>Email Template ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeckId__c</fullName>
        <description>This stores the Id of a Geck that is associated to this article.  Used for integration with Gecko.</description>
        <label>GeckId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geck_Additional_Question__c</fullName>
        <label>Additional Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geck_Internal_Info__c</fullName>
        <label>Internal Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geck_Pattern_ID__c</fullName>
        <label>Pattern Geck ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCS_Audit_Status__c</fullName>
        <description>KCS field</description>
        <label>KCS Audit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Audited</fullName>
                    <default>true</default>
                    <label>Not Audited</label>
                </value>
                <value>
                    <fullName>Audited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KCS_Comments__c</fullName>
        <description>KCS field</description>
        <label>KCS Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Migrated__c</fullName>
        <inlineHelpText>Represents the created date of the article from Siebel.  Note that this is in GMT</inlineHelpText>
        <label>Created Date (Migrated)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MW_Last_Modified_By_ID__c</fullName>
        <label>MW Last Modified By ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MW_Last_Modified_By__c</fullName>
        <label>MW Last Modified By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Release__c</fullName>
        <description>Used to determine if this article draft should be published as a new version (indicating a major release or that significant changes have been made) or to overwrite the current version.</description>
        <inlineHelpText>Choose Yes if you have made significant changes to this article and want a new version published to represent that change. No will result in a update to the existing version (EG, you made a spelling change as opposed to re-writing the article)</inlineHelpText>
        <label>Major Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Assessment__c</fullName>
        <description>KCS field</description>
        <label>Overall Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Rework</fullName>
                </value>
                <value>
                    <fullName>Sufficient for Use</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Found__c</fullName>
        <description>KCS field</description>
        <label>Problem Found</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect/Irrelevant</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Unclear</fullName>
                </value>
                <value>
                    <fullName>Title Problem</fullName>
                </value>
                <value>
                    <fullName>Link/Tag Problem</fullName>
                </value>
                <value>
                    <fullName>Metadata Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Support Package</label>
        <referenceTo>PRODUCT_SUPPRT__c</referenceTo>
        <relationshipLabel>FAQ</relationshipLabel>
        <relationshipName>FAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Support_Package_Code__c</fullName>
        <formula>Product_Package__r.CODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Support Package Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Support_Package_Release__c</fullName>
        <formula>Product_Package__r.GR_Release_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Support Package Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Support_Package_SW_ID__c</fullName>
        <formula>Product_Package__r.SUPPRT_SFTWR_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product_Support Package SW ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Support_Package_SW_Version__c</fullName>
        <formula>Product_Package__r.SUPPRT_SFTWR_VER_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product_Support Package SW Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Support_Package_Version__c</fullName>
        <formula>Product_Package__r.VER_FULL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Support Package Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_External__c</fullName>
        <label>Publish External</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_RT__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question (not use)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <label>Related Articles</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_Solution_ID__c</fullName>
        <label>Siebel Solution ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_to_Linked_Cases__c</fullName>
        <description>FG list all cases associated with the article</description>
        <formula>HYPERLINK(&quot;/apex/DisplayLincedCases?ArticleNumber=&quot;+ArticleNumber,ArticleNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List Cases associated to the article</inlineHelpText>
        <label>Click Article  Id to View Linked Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <description>Field created to replicate Validation Status value. The original Validation Status field is not accessible by BODI job .</description>
        <formula>TEXT(ValidationStatus)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <description>Field created to replicate Version Number value. The original Version Number field is not accessible by BODI job .</description>
        <formula>VersionNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FAQ</label>
    <pluralLabel>FAQ</pluralLabel>
    <validationRules>
        <fullName>Geck_ID_is_less_than_8_numbers</fullName>
        <active>true</active>
        <description>Geck ID can not be greater that 8 numbers in length</description>
        <errorConditionFormula>AND(NOT(ISBLANK(GeckId__c)),OR( 
LEN (GeckId__c) &gt;8, 
NOT(ISNUMBER( GeckId__c )) 
))</errorConditionFormula>
        <errorMessage>Geck ID must be a numeric value of 8 numbers or less. Only one geck ID is allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Major_Release_Required</fullName>
        <active>true</active>
        <description>the Major release field is always required on save</description>
        <errorConditionFormula>isblank(text( Major_Release__c ))</errorConditionFormula>
        <errorMessage>Major Release is required to save</errorMessage>
    </validationRules>
</CustomObject>